grid layout problem solved

--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -150,44 +150,23 @@ color: white;
 }
 
 
-/*Sections*/
-
-section {
-    width: 100%;
-    height: 300px;
-    background: #6AA4B0;
-    margin: 20px;
-    box-sizing: border-box;
-    border-style: ridge;
-}
+/*SECTIONS*/
 .sections {
-    width: 100%;
-    height: auto;
+    background-color: #2B4560;
     /*background: rgba(0, 0, 0, 0.2);*/
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: 1;
+    grid-template-rows: auto;
+    gap: 10px; 
+} 
+.sections > *{
+    background-color: #6AA4B0;
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.hero-and-call {
-    grid-column: 1/5;
-    grid-row: auto;
-}
-.event {
-    grid-column: 1/5;
-   
-}
-.weather {
-    grid-column: 1/5;
-    
-}
-.news-release {
-    grid-column: 1/5;
-    
-}
-.spotlight {
-    grid-column: 1/5;
-   
-}
 
 
 /*FORM*/
