--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -2,27 +2,43 @@
     nav ul li a {
         padding: 0.5rem 1rem;
     }
+
+
+    /*SECTIONS*/
+    .sections {
+        background-color: #2B4560;
+        display: grid;
+        grid-template-columns: 150px auto 150px;
+        grid-template-rows: repeat(3, 150px);
+        gap: 10px; 
+    } 
+    .sections > *{
+        background-color: #6AA4B0;
+        border: 1px solid black;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
     
     .hero-and-call {
-        grid-column: 2/4;
-        grid-row: 1/5;
-    }
-    .event {
-        grid-column: 1/2;
-        grid-row: 1/3;
-    }
-    .weather {
-        grid-column: 1/2;
-        grid-row: 3/5;
-    }
-    .news-release {
-        grid-column: 1/4;
-        grid-row: 5/7;
+        grid-column: 2/3;
+        grid-row: 1/ span 2;
     }
     .spotlight {
-        grid-column: 4/5;
-        grid-row: 1/7;
+        grid-column: 3/4;
+        grid-row: 1/ span 3;
     }
+    .news-release {
+        grid-column: 2/3;
+    }
+    .join {
+        grid-row: 3/4;
+    }
+    footer{
+        grid-column: 1/ span 3;
+        grid-row: 4/5
+    }
+    
     
     /*FORMS*/
     .form-box {
