--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -30,18 +30,5 @@
 
     /*sections*/
 
-    .weather {
-        grid-column: 1/3;
-        grid-row: 2/5;
-    }
-    .news-release {
-        grid-column: 3/5;
-        grid-row: 5/8;
-        
-    }
-    .spotlight {
-        grid-column: 1/5;
-        
-    }
    
 }
